# mino-editor

./: Cargo.toml  README.md  editor.txt  test.txt  text1.txt  tokenizer.txt
src/: buffer.rs  cleanup.rs  cli.rs  clipboard.rs  config.rs  diff.rs  editor.rs  error.rs  file.rs  highlight.rs  history.rs  lang.rs  main.rs  screen.rs  status.rs  style.rs  theme.rs  util.rs
