[package]
name = "mino"
version = "0.1.0"
edition = "2021"
authors = [ "Aapuji" ]
description = "A small text editor in the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
circular-buffer = "0.1.7"
clap = { version = "4.5.9", features = ["derive", "color", "help"] }
cli-clipboard = "0.4.0"
crossterm = "0.27.0"
supports-color = "3.0.0"
